# desktop-reminder

./: plan.md  设想.md
.github/workflows/: build-windows.yml
openspec/changes/archive/2026-06-09-add-hybrid-tauri-settings/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-add-hybrid-tauri-settings/specs/hybrid-desktop-reminder/: spec.md
openspec/specs/hybrid-desktop-reminder/: spec.md
reminder-v1/: .gitignore  Cargo.toml  README.md
reminder-v1/apps/reminder-agent/: Cargo.toml
reminder-v1/apps/reminder-agent/src/: main.rs  timer.rs  tray.rs
reminder-v1/apps/reminder-cli/: Cargo.toml
reminder-v1/apps/reminder-cli/src/: main.rs
reminder-v1/apps/reminder-ui/: index.html  package-lock.json  package.json
reminder-v1/apps/reminder-ui/src/: main.tsx  styles.css
reminder-v1/apps/reminder-ui/src-tauri/: Cargo.toml  tauri.conf.json
reminder-v1/apps/reminder-ui/src-tauri/capabilities/: default.json
reminder-v1/apps/reminder-ui/src-tauri/src/: main.rs
reminder-v1/crates/reminder-core/: Cargo.toml
reminder-v1/crates/reminder-core/src/: error.rs  lib.rs  model.rs  scheduler.rs
reminder-v1/crates/reminder-ipc/: Cargo.toml
reminder-v1/crates/reminder-ipc/src/: lib.rs
reminder-v1/crates/reminder-overlay/: Cargo.toml
reminder-v1/crates/reminder-overlay/src/: lib.rs  win32.rs
reminder-v1/crates/reminder-storage/: Cargo.toml
reminder-v1/crates/reminder-storage/src/: lib.rs
reminder-v1/docs/: V1_DEVELOPMENT_NOTES.md
reminder-v1/scripts/: install_task.ps1  uninstall_task.ps1  validate.ps1
