[workspace]
members = [
    "crates/reminder-core",
    "crates/reminder-ipc",
    "crates/reminder-storage",
    "crates/reminder-overlay",
    "apps/reminder-agent",
    "apps/reminder-cli",
    "apps/reminder-ui/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
directories-next = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri = "2.11"
tauri-build = { version = "2.5" }
tauri-plugin-single-instance = "2.3"
