[package]
name = "reminder-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "reminder-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories-next.workspace = true
reminder-core = { path = "../../crates/reminder-core" }
reminder-ipc = { path = "../../crates/reminder-ipc" }
reminder-overlay = { path = "../../crates/reminder-overlay" }
reminder-storage = { path = "../../crates/reminder-storage" }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
