[package]
name = "reminder-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "reminder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories-next.workspace = true
reminder-core = { path = "../../crates/reminder-core" }
reminder-ipc = { path = "../../crates/reminder-ipc" }
reminder-storage = { path = "../../crates/reminder-storage" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
