[package]
name = "reminder-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "reminder-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
chrono.workspace = true
reminder-core = { path = "../../../crates/reminder-core" }
reminder-ipc = { path = "../../../crates/reminder-ipc" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-single-instance.workspace = true
uuid.workspace = true
